--- a/solomon_fober_jim2015.tex
+++ b/solomon_fober_jim2015.tex
@@ -38,8 +38,8 @@
 Cet article a pour objet d'élaborer un modèle relationnel de la gravure
 musicale. Les bases de données relationnelles, de plus en plus répandues
 comme solution de stockage de données,
-permettent de résoudre des problèmes de l'indépendance et
-l'incohérence des données qui entravent la migration vers le web des
+permettent de résoudre des problèmes d'indépendance et
+de incohérence des données qui entravent la migration vers le web des
 logiciels de gravure musicale. Cette conception relationnelle de la partition
 musicale permet également de faire des projections arbitraires des partitions
 dans plusieurs contextes numériques. Après avoir survolé l'état de l'art de
